Added index.html features and styles

--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
                         </div>
                     </div>
                 </div>
-                <input type="submit" value="Google Search">
-                <input type="submit" value="I'm Feeling Lucky" name="btnI">
+                <div id="form_submit">
+                    <input type="submit" value="Google Search">
+                    <input type="submit" value="I'm Feeling Lucky" name="btnI">
+                </div>
             </form>
             <p>Google offered in: <a href="https://www.google.com/setprefs?sig=0_-YBABvlvH4rv7Riu77y7TP3aIEc%3D&hl=lt&source=homepage&sa=X&ved=0ahUKEwijiKSDw8GDAxXRS_EDHbcwCfMQ2ZgBCBU">lietuvių</a></p>
         </main>
