--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             
             function changeBackground(event) {
                 text_area_inner.style.backgroundColor = '#303134';
-                text_area_inner.style.border = 'none';
+                text_area_inner.style.border = '1px solid #303134';
                 event.stopPropagation();
             };
 
@@ -32,6 +32,7 @@
         <header>
             <a href="https://mail.google.com/mail/">Gmail</a>
             <a href="https://www.google.com/imghp">Images</a>
+            <a href="https://www.google.com/advanced_search">Advanced</a>
             <a id="products_menu" href="https://www.google.lt/intl/en/about/products"><img src="https://ssl.gstatic.com/gb/images/bar/al-icon.png" alt="Products"></a>
             <a href="https://accounts.google.com/SignOutOptions?hl=en&continue=https://www.google.com/&ec=GBRAmgQ"> <img id="profile_menu" src="https://lh3.googleusercontent.com/fife/AGXqzDl9az9gvNROl9Dpfsvl9aGRRI1TdCUmjhXgWLBPDqUFGjTZF_-UNF1HrHz-SCWyzPZ2WQZQNQ789MsEDxs19EEWw_DyhRy75k7pMZn4DaWxVUhJ3TFrbqswXs8wCgT_hJOLh3lC6xPqvnXBlqtTK8vXckvpxLNaejv591uaeW7KGtvwPnbpr5p_BXHUmUISfduyJcBvimGAxGPTXpOZ3UDWqzM1MMLEpUfthVuWf5uROtzhrz63KLAcz39rV4nKLteR_Tb-KbzxsQzu7Vrl5vjEC6E53hdRH40u-3ROe4Qf6uLmu-FNzMBOR7BPeg7BpS5L5t2b2e_KSZfnpuVT_XNBtqc6wD7cHtH2pYtbyPo6_MF1bIkzBf_ibx4q2HH5-oB0bCtFlzMV0-sLXW_6pVdaYrjWXjj9lczlvyVxEwIzIaCgZJwjQNHKaSafFySahZK1-JvSPXsx_euKdty1Q34Teg-59Moe4oEXV-KFwaQXqX7W6aPeotPpgg_DQ6I3AJkBSs0BLc4p8rPz5TUWvsxji7zQ8x_JGfKzNEaZB1aNm-SJumsA1e9Ko-kZMTjY8-uUPpEUvaes497L0R9OwghAu9Y07AfdxDp000cBs87Vt-vGm3bLyhz3pDu8aEqXTmSmoIc4qbDFZTIHkZ8nWY2IicthNB2M1XJ-x5y5lu2AfR-cSEvJuTJ36NpImVFkVpEB5lUTLoas31YFGISqcNIShOpt_plifPLxnB3YEm0DQ14bxge9Klvdbv883O8EdVqPApJPOWfDR24FVXWCGUbsSwOW0F7bfYEg9LL8N9ltOrZ7d0a77j7-aq6zNsCUMIbUNfSPxJhVax8ISMaxi-13GQfdilMI98_ZvqAJNL6UaZntX8egSNbq1NB6GwixbxEzSTy0PGEKI-dY-_z-OBy7olm0pnM__EKJFO6KrkYEa74ST8M6u9dx6Jchw7EY3OHDn8JqKDI3cV8jOaNucd_QqCGxuRxWN4DdTkeN0FgzKGgFol74glvC7FHNYwbeDEKdnxSeBjAQDdfhR_i4dCcowz1fUkuIiP_2Lyx33JTHVVAVCdxLI-HbUeymYYX5qBpMhUpcuDxKZ6OF757Z33MAOgAMVsD5Pc9QDvc7Mf9UfPkvlmO9PtwKbHOZoIDUbcWBqylbxIpSuzFCQ7DZjRT_mzjDl7nnSSkhB1vGX-lhFCHLjpd-CfQaCjJ7pYYzy6BiVCoUA-n3f74bpOCVLAjk3G_ecM0gN_ahzqfYTazC6LxbrlTA1SP7QvPoakfycbuWz8zbkhxjIATe37NUHLMzULar1WQNXvS79qrhMZPCl93NZKPteLPjSGOysTMHneC2AOog6SrZmFyX8KfCBAfo0xAfqC0UTXAXJQMJyULgmmml=s32-c" alt="User"></a>
         </header>
@@ -71,18 +72,28 @@
                     <input type="submit" value="I'm Feeling Lucky" name="btnI">
                 </div>
             </form>
-            <p>Google offered in: <a href="https://www.google.com/setprefs?sig=0_-YBABvlvH4rv7Riu77y7TP3aIEc%3D&hl=lt&source=homepage&sa=X&ved=0ahUKEwijiKSDw8GDAxXRS_EDHbcwCfMQ2ZgBCBU">lietuvių</a></p>
+            <div id="language">
+                <p>Google offered in: <a href="https://www.google.com/setprefs?sig=0_-YBABvlvH4rv7Riu77y7TP3aIEc%3D&hl=lt&source=homepage&sa=X&ved=0ahUKEwijiKSDw8GDAxXRS_EDHbcwCfMQ2ZgBCBU">lietuvių</a></p>
+            </div>
         </main>
         <footer>
-            <div>Lithuania</div>
-            <div>
-                <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwijiKSDw8GDAxXRS_EDHbcwCfMQkNQCCBY&url=https%3A%2F%2Fabout.google%2F%3Futm_source%3Dgoogle-LT%26utm_medium%3Dreferral%26utm_campaign%3Dhp-footer%26fg%3D1&usg=AOvVaw0wlNs_7lIW4wtR0CXLIE80&opi=89978449">About</a>
-                <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwijiKSDw8GDAxXRS_EDHbcwCfMQkdQCCBc&url=https%3A%2F%2Fwww.google.com%2Fintl%2Fen_lt%2Fads%2F%3Fsubid%3Dww-ww-et-g-awa-a-g_hpafoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpafooter%26fg%3D1&usg=AOvVaw13scHYDOgQWbh32aDw0dlZ&opi=89978449">Advertising</a>
-                <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwijiKSDw8GDAxXRS_EDHbcwCfMQktQCCBg&url=https%3A%2F%2Fwww.google.com%2Fservices%2F%3Fsubid%3Dww-ww-et-g-awa-a-g_hpbfoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpbfooter%26fg%3D1&usg=AOvVaw2SJ4zwRVXKyZr53qG9dm4K&opi=89978449">Bussiness</a>
-                <a href="https://google.com/search/howsearchworks/?fg=1">How Search works</a>
-                <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwijiKSDw8GDAxXRS_EDHbcwCfMQ8awCCBk&url=https%3A%2F%2Fpolicies.google.com%2Fprivacy%3Fhl%3Den-LT%26fg%3D1&usg=AOvVaw0vrU4Jj9JBTMxycy7cMC86&opi=89978449">Privacy</a>
-                <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwijiKSDw8GDAxXRS_EDHbcwCfMQ8qwCCBo&url=https%3A%2F%2Fpolicies.google.com%2Fterms%3Fhl%3Den-LT%26fg%3D1&usg=AOvVaw1STNvk57mQkF2r1NZ52nZJ&opi=89978449">Terms</a>
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Settings</a>
+            <div id="location">
+                <div>
+                    Lithuania
+                </div>
+            </div>
+            <div id="footer_links">
+                <div id="footer_links_1">
+                    <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwijiKSDw8GDAxXRS_EDHbcwCfMQkNQCCBY&url=https%3A%2F%2Fabout.google%2F%3Futm_source%3Dgoogle-LT%26utm_medium%3Dreferral%26utm_campaign%3Dhp-footer%26fg%3D1&usg=AOvVaw0wlNs_7lIW4wtR0CXLIE80&opi=89978449">About</a>
+                    <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwijiKSDw8GDAxXRS_EDHbcwCfMQkdQCCBc&url=https%3A%2F%2Fwww.google.com%2Fintl%2Fen_lt%2Fads%2F%3Fsubid%3Dww-ww-et-g-awa-a-g_hpafoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpafooter%26fg%3D1&usg=AOvVaw13scHYDOgQWbh32aDw0dlZ&opi=89978449">Advertising</a>
+                    <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwijiKSDw8GDAxXRS_EDHbcwCfMQktQCCBg&url=https%3A%2F%2Fwww.google.com%2Fservices%2F%3Fsubid%3Dww-ww-et-g-awa-a-g_hpbfoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpbfooter%26fg%3D1&usg=AOvVaw2SJ4zwRVXKyZr53qG9dm4K&opi=89978449">Bussiness</a>
+                    <a href="https://google.com/search/howsearchworks/?fg=1">How Search works</a>
+                </div>
+                <div id="footer_links_2">
+                    <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwijiKSDw8GDAxXRS_EDHbcwCfMQ8awCCBk&url=https%3A%2F%2Fpolicies.google.com%2Fprivacy%3Fhl%3Den-LT%26fg%3D1&usg=AOvVaw0vrU4Jj9JBTMxycy7cMC86&opi=89978449">Privacy</a>
+                    <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwijiKSDw8GDAxXRS_EDHbcwCfMQ8qwCCBo&url=https%3A%2F%2Fpolicies.google.com%2Fterms%3Fhl%3Den-LT%26fg%3D1&usg=AOvVaw1STNvk57mQkF2r1NZ52nZJ&opi=89978449">Terms</a>
+                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Settings</a>
+                </div>
             </div>
         </footer>
     </body>
