--- a/images.html
+++ b/images.html
@@ -30,15 +30,14 @@
     </head>
     <body>
         <header>
-            <a href="https://mail.google.com/mail/">Gmail</a>
-            <a href="https://www.google.com/imghp">Images</a>
-            <a href="https://www.google.com/advanced_search">Advanced</a>
+            <a href="index.html">Google</a>
             <a id="products_menu" href="https://www.google.lt/intl/en/about/products"><img src="https://ssl.gstatic.com/gb/images/bar/al-icon.png" alt="Products"></a>
             <a href="https://accounts.google.com/SignOutOptions?hl=en&continue=https://www.google.com/&ec=GBRAmgQ"> <img id="profile_menu" src="https://lh3.googleusercontent.com/fife/AGXqzDl9az9gvNROl9Dpfsvl9aGRRI1TdCUmjhXgWLBPDqUFGjTZF_-UNF1HrHz-SCWyzPZ2WQZQNQ789MsEDxs19EEWw_DyhRy75k7pMZn4DaWxVUhJ3TFrbqswXs8wCgT_hJOLh3lC6xPqvnXBlqtTK8vXckvpxLNaejv591uaeW7KGtvwPnbpr5p_BXHUmUISfduyJcBvimGAxGPTXpOZ3UDWqzM1MMLEpUfthVuWf5uROtzhrz63KLAcz39rV4nKLteR_Tb-KbzxsQzu7Vrl5vjEC6E53hdRH40u-3ROe4Qf6uLmu-FNzMBOR7BPeg7BpS5L5t2b2e_KSZfnpuVT_XNBtqc6wD7cHtH2pYtbyPo6_MF1bIkzBf_ibx4q2HH5-oB0bCtFlzMV0-sLXW_6pVdaYrjWXjj9lczlvyVxEwIzIaCgZJwjQNHKaSafFySahZK1-JvSPXsx_euKdty1Q34Teg-59Moe4oEXV-KFwaQXqX7W6aPeotPpgg_DQ6I3AJkBSs0BLc4p8rPz5TUWvsxji7zQ8x_JGfKzNEaZB1aNm-SJumsA1e9Ko-kZMTjY8-uUPpEUvaes497L0R9OwghAu9Y07AfdxDp000cBs87Vt-vGm3bLyhz3pDu8aEqXTmSmoIc4qbDFZTIHkZ8nWY2IicthNB2M1XJ-x5y5lu2AfR-cSEvJuTJ36NpImVFkVpEB5lUTLoas31YFGISqcNIShOpt_plifPLxnB3YEm0DQ14bxge9Klvdbv883O8EdVqPApJPOWfDR24FVXWCGUbsSwOW0F7bfYEg9LL8N9ltOrZ7d0a77j7-aq6zNsCUMIbUNfSPxJhVax8ISMaxi-13GQfdilMI98_ZvqAJNL6UaZntX8egSNbq1NB6GwixbxEzSTy0PGEKI-dY-_z-OBy7olm0pnM__EKJFO6KrkYEa74ST8M6u9dx6Jchw7EY3OHDn8JqKDI3cV8jOaNucd_QqCGxuRxWN4DdTkeN0FgzKGgFol74glvC7FHNYwbeDEKdnxSeBjAQDdfhR_i4dCcowz1fUkuIiP_2Lyx33JTHVVAVCdxLI-HbUeymYYX5qBpMhUpcuDxKZ6OF757Z33MAOgAMVsD5Pc9QDvc7Mf9UfPkvlmO9PtwKbHOZoIDUbcWBqylbxIpSuzFCQ7DZjRT_mzjDl7nnSSkhB1vGX-lhFCHLjpd-CfQaCjJ7pYYzy6BiVCoUA-n3f74bpOCVLAjk3G_ecM0gN_ahzqfYTazC6LxbrlTA1SP7QvPoakfycbuWz8zbkhxjIATe37NUHLMzULar1WQNXvS79qrhMZPCl93NZKPteLPjSGOysTMHneC2AOog6SrZmFyX8KfCBAfo0xAfqC0UTXAXJQMJyULgmmml=s32-c" alt="User"></a>
         </header>
         <main>
             <div id="logo">
                 <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_light_color_272x92dp.png">
+                <span id="images_text">images</span>
             </div>
             <form action="https://www.google.com/search" method="get">
                 <div id="text_area">
@@ -64,17 +63,13 @@
                                     <path fill="#4285f4" d="M112,24l-32,0L68,40H56.8C38.69,40,24,54.69,24,72.8V92h16V74c0-9.71,7.2-18,16-18h80L112,24z"></path>
                                 </g>
                             </svg>
+                            <svg id="magnifying" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+                            </svg>
                         </div>
                     </div>
                 </div>
-                <div id="form_submit">
-                    <input type="submit" value="Google Search">
-                    <input type="submit" value="I'm Feeling Lucky" name="btnI">
-                </div>
             </form>
-            <div id="language">
-                <p>Google offered in: <a href="https://www.google.com/setprefs?sig=0_-YBABvlvH4rv7Riu77y7TP3aIEc%3D&hl=lt&source=homepage&sa=X&ved=0ahUKEwijiKSDw8GDAxXRS_EDHbcwCfMQ2ZgBCBU">lietuvių</a></p>
-            </div>
         </main>
         <footer>
             <div id="location">
