Added styles for advanced search

--- a/advanced.html
+++ b/advanced.html
@@ -2,14 +2,16 @@
 <html lang="en">
     <head>
         <title>Advanced Search</title>
-        <link rel="advances.css">
+        <link rel="stylesheet" href="advanced.css">
     </head>
     <body>
         <header>
             <div id="top_bar">
                 <a href="https://www.google.com"><img src="https://www.gstatic.com/images/branding/googlelogo/svg/googlelogo_clr_74x24px.svg"></a>
-                <a id="products_menu" href="https://www.google.lt/intl/en/about/products"><img src="https://ssl.gstatic.com/gb/images/bar/al-icon.png" alt="Products"></a>
-                <a href="https://accounts.google.com/SignOutOptions?hl=en&continue=https://www.google.com/&ec=GBRAmgQ"> <img id="profile_menu" src="https://lh3.googleusercontent.com/fife/AGXqzDl9az9gvNROl9Dpfsvl9aGRRI1TdCUmjhXgWLBPDqUFGjTZF_-UNF1HrHz-SCWyzPZ2WQZQNQ789MsEDxs19EEWw_DyhRy75k7pMZn4DaWxVUhJ3TFrbqswXs8wCgT_hJOLh3lC6xPqvnXBlqtTK8vXckvpxLNaejv591uaeW7KGtvwPnbpr5p_BXHUmUISfduyJcBvimGAxGPTXpOZ3UDWqzM1MMLEpUfthVuWf5uROtzhrz63KLAcz39rV4nKLteR_Tb-KbzxsQzu7Vrl5vjEC6E53hdRH40u-3ROe4Qf6uLmu-FNzMBOR7BPeg7BpS5L5t2b2e_KSZfnpuVT_XNBtqc6wD7cHtH2pYtbyPo6_MF1bIkzBf_ibx4q2HH5-oB0bCtFlzMV0-sLXW_6pVdaYrjWXjj9lczlvyVxEwIzIaCgZJwjQNHKaSafFySahZK1-JvSPXsx_euKdty1Q34Teg-59Moe4oEXV-KFwaQXqX7W6aPeotPpgg_DQ6I3AJkBSs0BLc4p8rPz5TUWvsxji7zQ8x_JGfKzNEaZB1aNm-SJumsA1e9Ko-kZMTjY8-uUPpEUvaes497L0R9OwghAu9Y07AfdxDp000cBs87Vt-vGm3bLyhz3pDu8aEqXTmSmoIc4qbDFZTIHkZ8nWY2IicthNB2M1XJ-x5y5lu2AfR-cSEvJuTJ36NpImVFkVpEB5lUTLoas31YFGISqcNIShOpt_plifPLxnB3YEm0DQ14bxge9Klvdbv883O8EdVqPApJPOWfDR24FVXWCGUbsSwOW0F7bfYEg9LL8N9ltOrZ7d0a77j7-aq6zNsCUMIbUNfSPxJhVax8ISMaxi-13GQfdilMI98_ZvqAJNL6UaZntX8egSNbq1NB6GwixbxEzSTy0PGEKI-dY-_z-OBy7olm0pnM__EKJFO6KrkYEa74ST8M6u9dx6Jchw7EY3OHDn8JqKDI3cV8jOaNucd_QqCGxuRxWN4DdTkeN0FgzKGgFol74glvC7FHNYwbeDEKdnxSeBjAQDdfhR_i4dCcowz1fUkuIiP_2Lyx33JTHVVAVCdxLI-HbUeymYYX5qBpMhUpcuDxKZ6OF757Z33MAOgAMVsD5Pc9QDvc7Mf9UfPkvlmO9PtwKbHOZoIDUbcWBqylbxIpSuzFCQ7DZjRT_mzjDl7nnSSkhB1vGX-lhFCHLjpd-CfQaCjJ7pYYzy6BiVCoUA-n3f74bpOCVLAjk3G_ecM0gN_ahzqfYTazC6LxbrlTA1SP7QvPoakfycbuWz8zbkhxjIATe37NUHLMzULar1WQNXvS79qrhMZPCl93NZKPteLPjSGOysTMHneC2AOog6SrZmFyX8KfCBAfo0xAfqC0UTXAXJQMJyULgmmml=s32-c" alt="User"></a>    
+                <div id="right_corner">
+                    <a id="products_menu" href="https://www.google.lt/intl/en/about/products"><img src="https://ssl.gstatic.com/gb/images/bar/al-icon.png" alt="Products"></a>
+                    <a href="https://accounts.google.com/SignOutOptions?hl=en&continue=https://www.google.com/&ec=GBRAmgQ"> <img id="profile_menu" src="https://lh3.googleusercontent.com/fife/AGXqzDl9az9gvNROl9Dpfsvl9aGRRI1TdCUmjhXgWLBPDqUFGjTZF_-UNF1HrHz-SCWyzPZ2WQZQNQ789MsEDxs19EEWw_DyhRy75k7pMZn4DaWxVUhJ3TFrbqswXs8wCgT_hJOLh3lC6xPqvnXBlqtTK8vXckvpxLNaejv591uaeW7KGtvwPnbpr5p_BXHUmUISfduyJcBvimGAxGPTXpOZ3UDWqzM1MMLEpUfthVuWf5uROtzhrz63KLAcz39rV4nKLteR_Tb-KbzxsQzu7Vrl5vjEC6E53hdRH40u-3ROe4Qf6uLmu-FNzMBOR7BPeg7BpS5L5t2b2e_KSZfnpuVT_XNBtqc6wD7cHtH2pYtbyPo6_MF1bIkzBf_ibx4q2HH5-oB0bCtFlzMV0-sLXW_6pVdaYrjWXjj9lczlvyVxEwIzIaCgZJwjQNHKaSafFySahZK1-JvSPXsx_euKdty1Q34Teg-59Moe4oEXV-KFwaQXqX7W6aPeotPpgg_DQ6I3AJkBSs0BLc4p8rPz5TUWvsxji7zQ8x_JGfKzNEaZB1aNm-SJumsA1e9Ko-kZMTjY8-uUPpEUvaes497L0R9OwghAu9Y07AfdxDp000cBs87Vt-vGm3bLyhz3pDu8aEqXTmSmoIc4qbDFZTIHkZ8nWY2IicthNB2M1XJ-x5y5lu2AfR-cSEvJuTJ36NpImVFkVpEB5lUTLoas31YFGISqcNIShOpt_plifPLxnB3YEm0DQ14bxge9Klvdbv883O8EdVqPApJPOWfDR24FVXWCGUbsSwOW0F7bfYEg9LL8N9ltOrZ7d0a77j7-aq6zNsCUMIbUNfSPxJhVax8ISMaxi-13GQfdilMI98_ZvqAJNL6UaZntX8egSNbq1NB6GwixbxEzSTy0PGEKI-dY-_z-OBy7olm0pnM__EKJFO6KrkYEa74ST8M6u9dx6Jchw7EY3OHDn8JqKDI3cV8jOaNucd_QqCGxuRxWN4DdTkeN0FgzKGgFol74glvC7FHNYwbeDEKdnxSeBjAQDdfhR_i4dCcowz1fUkuIiP_2Lyx33JTHVVAVCdxLI-HbUeymYYX5qBpMhUpcuDxKZ6OF757Z33MAOgAMVsD5Pc9QDvc7Mf9UfPkvlmO9PtwKbHOZoIDUbcWBqylbxIpSuzFCQ7DZjRT_mzjDl7nnSSkhB1vGX-lhFCHLjpd-CfQaCjJ7pYYzy6BiVCoUA-n3f74bpOCVLAjk3G_ecM0gN_ahzqfYTazC6LxbrlTA1SP7QvPoakfycbuWz8zbkhxjIATe37NUHLMzULar1WQNXvS79qrhMZPCl93NZKPteLPjSGOysTMHneC2AOog6SrZmFyX8KfCBAfo0xAfqC0UTXAXJQMJyULgmmml=s32-c" alt="User"></a>
+                </div>
             </div>
             <h1>Advanced Search</h1>
         </header>
@@ -32,7 +34,7 @@
                     <input id="none" type="text" name="as_eq">
                     <label for="none">none of these words:</label>
                 </div>
-                <input type="submit" value="Advanced Search">
+                <input id="submit" type="submit" value="Advanced Search">
             </form>
         </main>
         <footer>
