Fixed image search

--- a/images.html
+++ b/images.html
@@ -69,6 +69,7 @@
                         </div>
                     </div>
                 </div>
+                <input id="hidden_submit" type="submit" value="img">
             </form>
         </main>
         <footer>
