Really fixed image search this time

--- a/images.html
+++ b/images.html
@@ -69,7 +69,8 @@
                         </div>
                     </div>
                 </div>
-                <input id="hidden_submit" type="submit" value="img">
+                <input type="hidden" name="tbm" value="isch"> 
+                <input id="hidden_submit" type="submit">
             </form>
         </main>
         <footer>
